--- a/templates/partials/topNavigation.ejs
+++ b/templates/partials/topNavigation.ejs
@@ -3,6 +3,6 @@
         <li><a href="/">Главная</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">Войти</a></li>
+        <li><a href="/login">Войти</a></li>
     </ul>
 </nav>
