--- a/templates/partials/topNavigation.ejs
+++ b/templates/partials/topNavigation.ejs
@@ -3,6 +3,9 @@
         <li><a href="/">Главная</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Войти</a></li>
+        <li><a href="/signin">Войти</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="/signup">Зарегистрироваться</a></li>
     </ul>
 </nav>
