--- a/templates/signin.ejs
+++ b/templates/signin.ejs
@@ -9,7 +9,8 @@
 <div id="room">
     <ul></ul>
     <form>
-        <input class="form-control" autocomplete="off" autofocus placeholder="Сообщение">
+        <input class="form-control" autocomplete="off" autofocus placeholder="Логин">
+        <input class="form-control" autocomplete="off" autofocus placeholder="Пароль">
     </form>
 </div>
 
@@ -37,4 +38,3 @@
         $('<li>', {text: text}).append(ul);
     });
 </script>
-});
